# qfnu-scores-monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yml  app.py  compose.yaml  main.py  pyproject.toml  scheduler.py
backend/: __init__.py  config.py  database.py
backend/api/: __init__.py  routes.py
backend/repositories/: __init__.py  settings_repository.py  user_repository.py
backend/services/: log_service.py  login_service.py  scheduler_service.py  settings_service.py  user_service.py
backend/utils/: captcha_ocr.py  crypto.py  dingtalk.py  score_monitor.py  session_manager.py  settings_store.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js  logs.js  settings.js  users.js
frontend/src/components/: ImportPanel.vue  LogDialog.vue  SettingsDialog.vue  StatCards.vue  UserList.vue
frontend/src/styles/: main.css
scripts/: build.sh  deploy.sh  setup.sh  start.sh  test-login.sh  test_login.py
utils/: captcha_ocr.py  logger.py  score_monitor.py  settings_store.py
