[project]
name = "qfnuscoremonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "loguru>=0.7.3",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "flask>=3.1.0",
    "apscheduler>=3.10.4",
    "cryptography>=44.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
